# hart

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cog.yaml  latency_profile.py  predict.py  pyproject.toml  sample.py
hart/kernels/: setup.py
hart/kernels/csrc/: pybind.cpp
hart/kernels/csrc/common/: dispatch_utils.h  reduction_utils.cuh  utils.cuh
hart/kernels/csrc/layernorm/: layernorm.h  layernorm_kernels.cu
hart/kernels/csrc/rope/: fused_rope.cu  fused_rope.h  fused_rope_with_pos.cu
hart/modules/diffusion/: __init__.py  diffloss.py  diffusion_utils.py  gaussian_diffusion.py  respace.py
hart/modules/losses/vqgan/: __init__.py  configuration_disc.py  discriminator.py
hart/modules/models/autoencoder/: __init__.py  configuration.py  hart_autoencoder.py  hart_autoencoder_with_disc.py
hart/modules/models/autoencoder/quantize/: __init__.py  hart_hybrid_quantize.py  var_quantize_multiple_res.py
hart/modules/models/transformer/: __init__.py  configuration.py  hart_transformer_t2i.py
hart/modules/networks/: basic_hart.py  basic_vae.py  utils.py
hart/modules/utils/: list.py  network.py  random.py
hart/utils/: __init__.py  constants.py  safety_check.py  tools.py
